--- a/a.html
+++ b/a.html
@@ -55,10 +55,10 @@
                     let e = img[i];
                     let ee = e.getAttribute("src");
                     t.style.backgroundImage = 'url('+ee+')';
-                    console.log(li[i]);
-                    console.log(e);
-                    console.log(ee);
-                    console.log('url('+ee+')');
+                 //   console.log(li[i]);
+                 //   console.log(e);
+                  //  console.log(ee);
+                  //  console.log('url('+ee+')');
 
                 }
 
